Fix submit button bug on IOS & add small changes to README.md

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,7 +258,7 @@ footer p {
     transition-duration: 0.3s;
     box-shadow: 0px 1px 3px #333333;
     background-color: #fff;
-    width: 135px;
+    width: 150px;
 }
 
 #events-links a:hover {
@@ -416,6 +416,7 @@ option {
     color: #333333;
     transition-duration: 0.3s;
     border-radius: 5px;
+    -webkit-appearance: none;
 }
 
 .submit:hover {
